Changes in simFrame version 0.6.0

    + Redesign of the package.
    
    + Slight optimizations in C++ code to compute inclusion probabilities.



Changes in simFrame version 0.5.0

    + Using package 'parallel' now for parallel computing instead of 'snow'.
    
    + 'runSimulation' and 'clusterRunSimulation' no longer produce a warning 
      when simulations are performed separately on different domains.



Changes in simFrame version 0.4.4

    + Rewrote parts of the C++ code.


Changes in simFrame version 0.4.3

    + S4 generic 'getCall' now has '...' argument to be consistent with 
      R 2.14.0 S3 generic.
    
    + Updated author affiliation.


Changes in simFrame version 0.4.2

    + Midzuno and Tille sampling now give a warning instead of throwing an error 
      when all inclusion probabilities are outside the interval (eps, 1-eps).


Changes in simFrame version 0.4.1

    + Added column to example data 'eusilcP' that indicates the main income 
      holder of each household.


Changes in simFrame version 0.4

    + Implemented 'runSimulation' and 'clusterRunSimulation' methods for mixed 
      simulation designs.
    
    + Added control class "TwoStageControl" and corresponding 'setup' and 
      'clusterSetup' methods for two-stage sampling.
        
    + Probability weights or inclusion probabilities for unequal probability 
      sampling can now be supplied by specifying a variable of the population 
      data.
    
    + Using Rcpp now to incorporate C++ instead of C code.
    
    + Added functions 'brewer', 'midzuno' and 'tille' for Brewer, Midzuno and 
      Tille sampling, respectively (corresponding to 'UPbrewer', 'UPmidzuno' 
      and 'UPtille' from package 'sampling', but faster C++ implementation).



Changes in simFrame version 0.3.7

    + Added JSS paper to references in help files and vignettes.


Changes in simFrame version 0.3.6

    + Changes in package vignettes.


Changes in simFrame version 0.3.5
